Prepare for JDK11 baseline.